turtlesim_ws/log/build_2025-04-22_05-34-58/my_turtle_controller/stderr.log
  File "/home/juandtovar/ros2_ws/install/my_turtle_controller/lib/python3.10/site-packages/my_turtle_controller/move_turtle.py", line 19
    def boton_presionado(self, key)
                                   ^
SyntaxError: expected ':'

